# albedo-rs

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: capabilities.yaml  lib.rs  main.rs
tests/: server_test.rs
