[package]
name = "albedo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
http = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
tower-service = "0.3"
http-body-util = "0.1"
tracing-test = "0.2"
